# Cyber-Jianghu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  QuickStart-Client-SDK.md  QuickStart-Server.md  Readme.en.md  Readme.md  docker-compose.prod.yml  docker-compose.yml  install.sh
crates/agent/: .env.agent  .env.example  Cargo.toml  Dockerfile  QuickStart-Agent.en.md  QuickStart-Agent.md  Readme.en.md  Readme.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh
crates/agent/config/: agent.yaml.example  trace.yaml
crates/agent/docs/architecture/: 01_概述.md  02_模块结构.md  03_通信协议.md  04_认知架构.md  05_生命周期.md  06_规划.md  07_模型选型.md
crates/agent/examples/: basic.rs  dialogue_example.rs  openclaw_integration.rs  registry_example.rs  validator_example.rs
crates/agent/src/: config.rs  lib.rs  models.rs
crates/agent/src/ai/: mod.rs  prompts.rs
crates/agent/src/component/: attention.rs  delta_engine.rs  mod.rs  rule_cache.rs  state_store.rs
crates/agent/src/core/: agent.rs  builder.rs  cognitive.rs  lifecycle.rs  mod.rs  reconnect.rs  reflector_ext.rs  social.rs  tools.rs  utils.rs
crates/agent/src/infra/: mod.rs
crates/agent/src/runtime/: decision.rs  mod.rs
crates/agent/src/soul/: mod.rs
crates/agent/src/transport/: mod.rs  websocket.rs
crates/agent/static/panel/: character.html  create.html  index.html  manage.html  script.js  settings.html  setup.html  style.css  welcome.html
crates/agent/templates/: README.en.md  README.md
crates/agent/templates/personas/: agent-001-liuyunniang.json  agent-002-yanwugui.json  agent-003-fangziqing.json  agent-004-xiaocui.json  agent-005-qiansantong.json
crates/agent/tests/: cognitive_context_test.rs  cognitive_integration_test.rs  config_watcher_test.rs  persona_event_rules_test.rs  persona_persistence_test.rs  prefix_cache_e2e_test.rs  relationship_persistence_test.rs  test_token_metrics.rs
crates/embedding/: Cargo.toml  Dockerfile
crates/embedding/src/: download.rs  lib.rs  local_embedder.rs
crates/protocol/: Cargo.toml  Readme.en.md  Readme.md
crates/protocol/docs/: world_event_schemas.md
crates/protocol/docs/architecture/: 01_概述.md  02_消息类型.md  03_类型定义.md  04_审核.md
crates/protocol/src/: default_world_rules.md  error.rs  lib.rs  messages.rs  resolve.rs  sqlx_types.rs  types.rs
crates/protocol/src/types/: actions.rs  attributes.rs  entities.rs  governance.rs  locations.rs  narrative.rs  prompt_template.rs  relationship.rs  review.rs  rules.rs  world.rs
crates/server/: .env.example  Cargo.toml  Dockerfile  Dockerfile.ci  QuickStart-Server.en.md  QuickStart-Server.md  Readme.en.md  Readme.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh
crates/server/config/: action_evolution.yaml  actions.json  actions.yaml  attributes.json  attributes.yaml  config.yaml  display_messages.yaml  emergence.yaml  emotion.yaml  game_rules.json  game_rules.yaml  initial_inventory.json  initial_inventory.yaml  initial_recipes.yaml  inventory.json  inventory.yaml  items.json  items.yaml  llm.yaml  locations.json  locations.yaml  narrative_config.json  narrative_config.yaml  network.json  network.yaml  persona.yaml  persona_event_rules.yaml  prompt_templates.json  prompt_templates.yaml  recipes.json  recipes.yaml  reward.yaml  rules.json  souls.yaml  telemetry_config.yaml  time.json  time.yaml  validation_rules.yaml  world-building-rules.json  world-building-rules.yaml  (+1 more)
crates/server/config/prompts/: fuxi_review.md  fuxi_review_prompt.md  shennong_review.md  shennong_review_prompt.md  xuanyuan_review.md  xuanyuan_review_prompt.md
crates/server/docs/architecture/: 01_概述.md  02_模块结构.md  03_通信协议.md  04_Tick引擎.md  05_数据驱动.md  06_Agent生命周期.md  07_动作系统.md  08_物品系统.md  09_对话系统.md  10_错误处理.md  11_数据库.md  12_规划.md
crates/server/migrations/: 001_infrastructure.sql  001_initial_schema.sql  002_auth.sql  002_devices.sql  002_jsonb_attributes.sql  003_agents.sql  003_ground_items.sql  004_drop_legacy_columns.sql  004_items.sql  005_tick_system.sql  006_ground_items.sql  006_social.sql  007_agent_extensions.sql  007_experience_logs.sql  008_server_deployment.sql  008_soul_cycle_metadata.sql  009_chronicles.sql  009_rename_hunger_thirst.sql  010_action_evolution.sql  010_realtime_action_logs.sql  011_experience_stream_index.sql  011_telemetry.sql  012_agent_status.sql  012_chinese_ids.sql  012_drop_state_transition_count.sql  013_agent_status_dead.sql  013_agent_vendor_refill.sql  013_drop_ir_columns.sql  014_add_stage_column.sql  014_agent_birth_tick.sql  014_expand_action_logs.sql  015_agent_state_version.sql  015_public_lessons.sql  016_agent_daily_summaries.sql  016_audit_logs.sql  017_audit_logs_context.sql  017_chaos_marker.sql  018_action_evolution_group_links.sql  018_agent_biography.sql  019_agent_daily_summaries_fk.sql  (+9 more)
crates/server/src/: config.rs  lib.rs  main.rs  paths.rs  state.rs  time_utils.rs
crates/server/src/actions/: mod.rs  schema_validator.rs  types.rs  validator.rs
crates/server/src/chronicle/: collector.rs  generator.rs  mod.rs  storage.rs
crates/server/src/config_validator/: mod.rs
crates/server/src/db/: agent_ops.rs  audit_ops.rs  common.rs  ground_item_ops.rs  item_ops.rs  mod.rs  relationship_ops.rs  role_ops.rs  state_ops.rs  vendor_ops.rs
crates/server/src/dialogue/: dialogue_handler.rs  mod.rs  session.rs  session_manager.rs  types.rs
crates/server/src/emergence/: config.rs  detector.rs  loader.rs  mod.rs
crates/server/src/game_data/: cache.rs  formula_engine.rs  loader.rs  mod.rs  test_utils.rs
crates/server/src/governance/: action_writer.rs  auto_evolve.rs  classifier.rs  engine.rs  handlers.rs  ir_generator.rs  llm_review.rs  manifest.rs  mapper.rs  mod.rs  proposal_store.rs  types.rs
crates/server/src/handlers/: admin_auth.rs  agent.rs  agent_by_device.rs  agent_daily_summaries.rs  (+14 more)
crates/server/static/: index.html
crates/server/tests/: actions_integration_test.rs  actions_transmission_test.rs  config_integrity_test.rs  telemetry_integration_test.rs  tick_integration_test.rs
(+509 files in other folders)
