[package]
name = "cyber-jianghu-agent"
version = "0.1.183"
edition = "2024"
authors = ["Cyber-Jianghu Community"]
license = "MIT OR Apache-2.0"
description = "Agent SDK for Cyber-Jianghu MMO-MAS - connects to game server with multiple decision modes"

[dependencies]
# 协议（包含合并后的 GameError)
cyber-jianghu-protocol = { version = "0.1.43", path = "../protocol" }

# 异步运行时
tokio = { workspace = true }
async-trait = "0.1"

# WebSocket 客户端
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# 工具库
chrono = { workspace = true }
uuid = { workspace = true }
url = "2.5"
dirs = "6.0.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
lru = "0.12"

# HTTP 客户端（用于 Server HTTP API 调用）
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# HTTP 服务器（用于 HTTP API 辅助功能）
axum = { version = "0.8", features = ["ws", "tokio"] }
tower = "0.5"
http-body-util = "0.1"
http-body = "1.0"
bytes = "1.0"

# SSE 流式响应
async-stream = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# SQLite 数据库（用于本地记忆存储）
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# 向量计算（用于语义记忆）
candle-core = "0.10"
candle-transformers = "0.10"
candle-nn = "0.10"

# Tokenizer（用于分词）
tokenizers = "0.22.2"

# HNSW 向量索引（用于向量检索）
instant-distance = "0.6"

# 并行计算
rayon = "1.10"

# 快速哈希（用于缓存变化检测）
fnv = "1.0"

# 随机数生成
rand = { workspace = true }

# 文件系统监控（配置热加载）
notify = "7"

# 浏览器打开
open = "5"

# 速率限制（HTTP API）
governor = "0.6"

# 安全内存清理（API密钥）
zeroize = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.27.0"
dotenv = "0.15"
