[package]
name = "cyber-jianghu-embedding"
version = "0.1.0"
edition = "2024"
authors = ["Cyber-Jianghu Community"]
license = "MIT OR Apache-2.0"
description = "Embedding service for Cyber-Jianghu MMO-MAS - local BERT inference + HTTP API"

[lib]
name = "cyber_jianghu_embedding"
path = "src/lib.rs"

[[bin]]
name = "cyber-jianghu-embedding"
path = "src/bin/embedding-service.rs"

[dependencies]
# 异步运行时
tokio = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP 服务器
axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# 向量计算
candle-core = "0.10"
candle-transformers = "0.10"
candle-nn = "0.10"

# Tokenizer
tokenizers = "0.22.2"

# HTTP 客户端（模型下载）
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# SHA256 校验
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# 数据目录
dirs = "6.0.0"
